# sparkscan-rs

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .release-plz.toml  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  sparkscan.json
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: doc-tests.yml  release-plz.yml  tests.yaml
crates/sparkscan/: CHANGELOG.md  Cargo.toml  build.rs  openapi.json  sparkscan.json
crates/sparkscan-client/: CHANGELOG.md  Cargo.toml
crates/sparkscan-client/src/: client.rs  lib.rs
crates/sparkscan-ws/: CHANGELOG.md  Cargo.toml  build.rs
crates/sparkscan-ws/examples/: basic_usage.rs  example.rs
crates/sparkscan-ws/schemas/: balance_schema.json  token_balance_schema.json  token_price_schema.json  token_schema.json  transaction_schema.json
crates/sparkscan-ws/src/: client.rs  error.rs  lib.rs  subscription.rs  types.rs
crates/sparkscan-ws/tests/: integration.rs  unit.rs
crates/sparkscan/doc/: address_summary.md  get_address_tokens.md  get_address_transactions.md  get_addresses_latest_txid.md  get_latest_transactions.md  get_token_holders.md  get_token_leaderboard.md  get_token_transactions.md  get_wallet_leaderboard.md  new.md  new_with_api_key.md  new_with_client.md  root_get.md  token_issuer_lookup.md
crates/sparkscan/src/: lib.rs
crates/sparkscan/tests/: noop.rs
