[package]
name = "sparkscan-client"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/flashnetxyz/sparkscan-rs.git"
description = "A Rust client for the SparkScan API (based on progenitor-client and adjusted for reqwest-middleware)"

[features]
default = []
middleware = ["dep:reqwest-middleware"]

[dependencies]
bytes = "1.10.1"
futures-core = "0.3.31"
percent-encoding = "2.3.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"

# HTTP
reqwest-middleware = { workspace = true, optional = true }

# Misc
cfg-if = { workspace = true }

[dev-dependencies]
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
