[package]
name = "sparkscan-client"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/flashnetxyz/sparkscan-rs.git"
description = "A Rust client for the SparkScan API (based on progenitor-client and adjusted for reqwest-middleware)"

[features]
default = []
middleware = ["dep:reqwest-middleware"]
wasm = []

[dependencies]
bytes = "1.10.1"
futures-core = "0.3.31"
percent-encoding = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
cfg-if = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["json", "stream", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["json", "stream"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# HTTP
reqwest-middleware = { workspace = true, optional = true }

[dev-dependencies]
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
